pub struct Address5 {
    street: String,
    city: String,
}
