pub struct Category {
    name: String,
}
