pub struct Employee {
    username: String,
    email: String,
    position: String,
    salary: f64,
    warehouse: Warehouse,
}

impl User for Employee {
    // TODO: implement trait methods
}
