pub struct Payment {
    amount: f64,
    method: String,
}
