pub struct Product {
    name: String,
    price: f64,
    category: Category,
    supplier: Supplier,
}
