pub struct Supplier {
    name: String,
    phone: String,
}
