pub struct User {
    username: String,
    email: String,
}
