pub struct Warehouse {
    name: String,
    product: Product,
}
